 * All event outlets have a "Play" button that you can test the event with.
 * You can now change the "Show Timer Text" option if LUI is the only addon enabled that can handle cooldown timer texts.
 * Changed the "Hide when slot is empty" to include hiding the icon if the slot being checked contains a shield or off-hand frill.
 * Implemented the "Failed Conditions" opacity setting for meta icons.
 * Bug Fixes:
 ** (r356) Attempted a fix for default.lua:70 attempt to concatenate global 'input' (a table value)
 ** (r358) Icons tracking multiple elements whose start times are exactly the same should now properly update their timers when the first element gives yield to the second after timer expiration.
 ** (r358) Attempted a fix for TellMeWhen_Options.lua:2163: attempt to index upvalue 'HELP' (a nil value)
 ** (r360) If a meta icon is directly checking another meta icon, and the meta icon being checked changes the icon that is is checking, the meta icon checking the other meta icon should now properly update its inherited settings.
 ** (r365) Buff/Debuff icons tracking the "Enrage" dispel type only should now always show the correct texture in configuration.
 ** (r368) Lightwell glyph detection was apparently a little iffy. Added some manual checks in case the events don't fire when they should.
 ** (r370) The "ReducedArmor" equivalency should now track raptors' "Tear Armor" debuff properly.
 ** (r372) TellMeWhen_Options-r369.lua:278 attempt to index local "f" (a nil value)
 
===v4.7.2===
 * New Icon Type: Lightwell
 * Condition icons now use the Custom Texture editbox to select their texture instead of the Choose Name editbox (for consistency)
 * You can now output text to the raid warning frame without actually sending a raid warning to your raid.
 * You can now export icons to an entire raid or your entire guild by typing "RAID" or "GUILD" as the name to export to.
 * Meta icons can now sort their components based on their current duration.